# quibble

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  action.yml
.github/: dependabot.yml
.github/workflows/: containers.yml  rust-release.yml  rust.yml  sec-rudra.yml
examples/github-desktop/: docker-compose.yml
src/: cli.rs  compose.rs  config.rs  containers.rs  formatters.rs  main.rs  rules.rs  security.rs
src/compose/: rules.rs  spec.rs
src/formatters/: sarif.rs
src/rules/: all.rs  environment.rs  images.rs  registry.rs  socket.rs  version.rs
