[package]
name = "quibble"
version = "0.3.0"

authors = ['GeekMasher']
description = "A container security tool written in Rust focusing on compose based configuration as code"
readme = "README.md"
homepage = "https://github.com/GeekMasher/quibble"
repository = "https://github.com/GeekMasher/quibble"
license = "MIT"

keywords = ["containers", "security", "compose"]

edition = "2021"
rust-version = "1.67"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# CLI parser
clap = { version = "4.0", features = ["derive"] }
console = "0.15"
dialoguer = "0.10"
indicatif = "0.17"
# Error handling
thiserror = "1"
anyhow = "1"
# logging
log = "0.4"
env_logger = "0.10"
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
toml = "0.7"

walkdir = "2.3"
